--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -14,12 +13,10 @@
 
     <title>Frontend Mentor | Recipe page</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style></style>
   </head>
   <body>
     <main>
-      <div class="recipe-container">
+      <div class="recipe-container flow-content">
         <img
           src="./assets/images/image-omelette.jpeg"
           alt="A Simple Omelette"
@@ -96,16 +93,16 @@
             <td>277kcal</td>
           </tr>
           <tr>
-            <th>Carbs</th>
-            <td>0g</td>
+            <th class="border-top">Carbs</th>
+            <td class="border-top">0g</td>
           </tr>
           <tr>
-            <th>Protein</th>
-            <td>20g</td>
+            <th class="border-top">Protein</th>
+            <td class="border-top">20g</td>
           </tr>
           <tr>
-            <th>Fat</th>
-            <td>22g</td>
+            <th class="border-top">Fat</th>
+            <td class="border-top">22g</td>
           </tr>
         </table>
       </div>
